--- a/src/pages/report/[id].astro
+++ b/src/pages/report/[id].astro
@@ -54,3 +54,4 @@ const reports = await res.json();
     </StyledSummaryContainer>
   </StyledContent>
 </StyledWrapper> -->
+../article/pandaStyles ../shared/pandaStyles
