--- a/src/pages/article/[id].astro
+++ b/src/pages/article/[id].astro
@@ -2,8 +2,8 @@
 import {
   Title,
   Wrapper,
-  Content,
   Img,
+  Content,
   SummaryContainer,
   Summary,
 } from "../shared/pandaStyles";
@@ -57,4 +57,5 @@ const articleData = await articleResponse.json();
       <StyledSummary>{articleData.summary}</StyledSummary>
     </StyledSummaryContainer>
   </StyledContent>
-</StyledWrapper> -->
+</StyledWrapper> -->./pandaStyles
+../shared/pandaStyles
