--- a/src/pages/article/[id].astro
+++ b/src/pages/article/[id].astro
@@ -6,7 +6,7 @@ import {
   Content,
   SummaryContainer,
   Summary,
-} from "../shared/pandaStyles";
+} from "../../styles/shared/pandaStyles";
 
 const { id } = Astro.params;
 
@@ -58,4 +58,4 @@ const articleData = await articleResponse.json();
     </StyledSummaryContainer>
   </StyledContent>
 </StyledWrapper> -->./pandaStyles
-../shared/pandaStyles
+../shared/pandaStyles ../../styles/shared/pandaStyles
